# zeta-life

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .zenodo.json  CITATION.cff  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  behavior_engine.py  bottom_up_integrator.py  chat_psyche.py  cluster.py  cluster_assigner.py  docker-compose.yml  exp_entropy_validation.py  exp_hierarchical_validation.py  exp_lyapunov_validation.py  exp_organism.py  exp_real_validation.py  exp_self_reflection.py  exp_self_reflection_results_20260103_2332.json  exp_zeta_vs_baseline.py  hierarchical_simulation.py  micro_psyche.py  organism_cell.py  organism_consciousness.py  pyproject.toml  top_down_modulator.py  zeta_conscious_self.py  zeta_consciousness.py  zeta_dreams.py  zeta_individuation.py  zeta_introspection.py  zeta_memory.py  zeta_organism.py  zeta_psyche.py  zeta_psyche_voice.py  zeta_rnn.py  (+1 more)
.github/workflows/: ci.yml
config/: __init__.py  config.py  default.yaml  example_integration.py
demos/: chat_psyche.py  demo_atencion_visual.py  demo_completa_zeta_consciousness.py  demo_resilience.py  quickstart.py
docs/: DOCUMENTACION.md  EVOLUCIONES_PROPUESTAS.md  EXPERIMENTS.md  GOLDILOCKS_DISCOVERY.md  IPUESA_EXPERIMENTS.md  PLAN_ZETA_PSYCHE.md  README_organism.md  REPRODUCE.md  SESSION_LOG_2026-01-03.md  TEORIA_ZETA_EMERGENCIA.md  TROUBLESHOOTING.md  conf.py  getting-started.md  index.rst  requirements.txt
docs/_static/: custom.css  switcher.json
docs/api/: modules.rst
docs/conceptual/: ipuesa-conceptual-closure.md
docs/papers/: ipuesa-functional-identity-paper.md  ipuesa-identidad-funcional-paper.md  zeta-life-framework-paper.md
docs/plans/: 2025-12-26-zeta-lstm.md  2025-12-26-zeta-organism-design.md  2026-01-03-hierarchical-consciousness-design.md  2026-01-09-abstract-vertices-design.md  2026-01-10-ipuesa-ae-design.md  2026-01-10-ipuesa-ce-design.md  2026-01-10-ipuesa-ct-design.md  2026-01-10-ipuesa-ei-design.md  2026-01-10-ipuesa-hg-cal-design.md  2026-01-10-ipuesa-hg-design.md  (+14 more)
evolved_configs/: README.md
expected_outputs/: ablation_results.json  synth_v2_metrics.json
notebooks/: 01_zeta_kernel.ipynb  02_zeta_organism.ipynb  03_zeta_psyche.ipynb  04_hierarchical_consciousness.ipynb  05_strange_loop.ipynb
scripts/: export_paper_html.py  export_paper_pdf.py  generar_resumen_ejecutivo.py  generate_paper_figures.py  validate_reproduction.py
tests/: test_behavior_engine.py  test_cell_state.py  test_cluster.py  test_evolution.py  test_foraging.py  test_force_field.py  test_hierarchical_simulation.py  test_hierarchical_structures.py  test_integration.py  test_integrators.py  test_memory_conversation.py  test_micro_psyche.py  test_organism_cell.py  test_resilience.py  test_top_down_modulator.py  test_zeta_organism.py  test_zeta_psyche.py  test_zeta_rnn.py
(+138 files in other folders)
