[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zeta-life"
version = "0.1.0"
description = "Artificial Consciousness through Riemann Zeta Function - Emergent Intelligence & Jungian AI"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Francisco Ruiz"}
]
keywords = [
    "artificial-life",
    "consciousness",
    "riemann-zeta",
    "emergent-intelligence",
    "jungian-psychology",
    "multi-agent-systems",
    "neural-networks",
    "ai-safety"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "torch>=2.0.0",
    "matplotlib>=3.5.0",
    "scipy>=1.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=1.0.0",
]
full = [
    "mpmath>=1.3.0",  # For exact zeta zeros
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
]

[project.scripts]
zeta-chat = "zeta_life.demos.chat_psyche:main"

[project.urls]
Homepage = "https://github.com/skyvanguard/zeta-life"
Documentation = "https://zeta-life.readthedocs.io"
Repository = "https://github.com/skyvanguard/zeta-life"
Issues = "https://github.com/skyvanguard/zeta-life/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E741",   # ambiguous variable name
    "F401",   # unused import (too many false positives during dev)
    "F841",   # unused variable
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "S101"]  # No docstrings required in tests, allow assert
"experiments/*" = ["D", "T201"]  # No docstrings, allow print

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
